--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
 html {
   color: #404040;
   font: 400 1em/1.4 'Open Sans', sans-serif; }
@@ -30,7 +31,7 @@ html {
       font-size: 48px;
       margin-bottom: 5px; }
     .site .container .tag-line {
-      margin-top: 14px;
+      margin-top: 20px;
       font-size: 20px; }
 
 .code {
@@ -53,12 +54,31 @@ html {
     width: 100%;
     padding: 10px 20px;
     font-size: 14px;
-    font-family: monaco, courier; }
+    font-family: monaco, courier;
+    border: 1px solid #ccc;
+    border-radius: 2px 0 0 2px; }
+  .code-input__item {
+    color: #666;
+    font-weight: 400;
+    font-size: 16px;
+    background-color: rgba(147, 128, 108, 0.1);
+    border: 1px solid #ccc;
+    border-left: none;
+    border-radius: 0 2px 2px 0; }
 
 .code-output {
-  border: 1px solid #ccc;
-  min-height: 45px; }
-  .code-output span {
-    font-family: monaco, courier;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+  .code-output input {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 100%;
     padding: 10px 20px;
-    display: block; }
+    font-size: 14px;
+    font-family: monaco,courier;
+    border: 1px solid #ccc;
+    border-radius: 2px 2px 2px 2px; }
