--- a/static/main.css
+++ b/static/main.css
@@ -10,6 +10,13 @@ h1, h2, h3, h4, h5, h6 {
 p, span {
   color: #E8E8E8; }
 
+p {
+  font-size: 14px; }
+
+a {
+  color: #F7CA88;
+  text-decoration: none; }
+
 .site {
   display: -webkit-box;
   display: -webkit-flex;
@@ -41,10 +48,12 @@ p, span {
     .site .container .tag-line {
       margin-top: 20px;
       font-size: 20px; }
+    .site .container p {
+      text-align: center; }
 
 .form-container {
-  padding: 1em 1.5em;
-  margin-top: 60px; }
+  margin-top: 60px;
+  margin-bottom: 30px; }
 
 .code__label {
   margin-bottom: 3px;
