--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -24,6 +24,8 @@ p, span {
 
 p {
   font-size: 14px;
+  line-height: 140%;
+  font-weight: lighter;
 }
 
 a {
@@ -72,7 +74,7 @@ a {
 
 .form-container {
   margin-top: 60px;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
 }
 
 .code {
