--- a/static/main.css
+++ b/static/main.css
@@ -1,115 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
-html {
-  color: #404040;
-  font: 400 1em/1.4 'Open Sans', sans-serif;
-  background-color: #181818; }
-
-h1, h2, h3, h4, h5, h6 {
-  color: #b8b8b8; }
-
-p, span {
-  color: #E8E8E8; }
-
-p {
-  font-size: 14px;
-  line-height: 140%;
-  font-weight: lighter; }
-
-a {
-  color: #F7CA88;
-  text-decoration: none; }
-
-.site {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column; }
-  .site .content {
-    padding-top: 20px;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
-    width: 100%; }
-  .site .container {
-    max-width: 700px;
-    margin: 0 auto; }
-    .site .container .title, .site .container .tag-line {
-      text-align: center;
-      line-height: .8;
-      color: #7CAFC2; }
-    .site .container .title {
-      font-size: 48px;
-      margin-bottom: 5px; }
-    .site .container .tag-line {
-      margin-top: 20px;
-      font-size: 20px; }
-    .site .container p {
-      text-align: center; }
-
-.form-container {
-  margin-top: 60px;
-  margin-bottom: 80px; }
-
-.code__label {
-  margin-bottom: 3px;
-  font-size: 16px; }
-.code:last-child {
-  margin-top: 20px; }
-
-.code-input {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex; }
-  .code-input__field {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    width: 100%;
-    padding: 10px 20px;
-    font-size: 14px;
-    font-family: monaco, courier;
-    border: 1px solid #b8b8b8;
-    border-radius: 4px 0 0 4px; }
-    .code-input__field:focus {
-      border-color: #7CAFC2; }
-  .code-input__item {
-    font-weight: 400;
-    font-size: 14px;
-    font-weight: bold;
-    background-color: #AB4642;
-    color: white;
-    border: 2px solid #AB4642;
-    border-radius: 0 4px 4px 0;
-    cursor: pointer; }
-    .code-input__item:hover {
-      -webkit-transition: all 0.1s ease;
-              transition: all 0.1s ease;
-      color: white;
-      background-color: #b94d49;
-      border-color: #b94d49; }
-
-.code-output {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex; }
-  .code-output input {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    width: 100%;
-    padding: 10px 20px;
-    font-size: 14px;
-    font-family: monaco,courier;
-    border: 1px solid #b8b8b8;
-    border-radius: 4px; }
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);html{color:#404040;font:400 1em/1.4 'Open Sans',sans-serif;background-color:#181818}h1,h2,h3,h4,h5,h6{color:#b8b8b8}p,span{color:#E8E8E8}p{font-size:14px;line-height:140%;font-weight:lighter}a{color:#F7CA88;text-decoration:none}.site{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:100%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column}.site .content{padding-top:20px;-webkit-box-flex:1;-webkit-flex:1 0 auto;-ms-flex:1 0 auto;flex:1 0 auto;width:100%}.site .container{max-width:700px;margin:0 auto}.site .container .title,.site .container .tag-line{text-align:center;line-height:.8;color:#7CAFC2}.site .container .title{font-size:48px;margin-bottom:5px}.site .container .tag-line{margin-top:20px;font-size:20px}.site .container p{text-align:center}.form-container{margin-top:60px;margin-bottom:80px}.code__label{margin-bottom:3px;font-size:16px}.code:last-child{margin-top:20px}.code-input{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}.code-input__field{-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;width:100%;padding:10px 20px;font-size:14px;font-family:monaco,courier;border:1px solid #b8b8b8;border-radius:4px 0 0 4px}.code-input__field:focus{border-color:#7CAFC2}.code-input__item{font-size:14px;font-weight:700;background-color:#AB4642;color:#fff;border:2px solid #AB4642;border-radius:0 4px 4px 0;cursor:pointer}.code-input__item:hover{-webkit-transition:all .1s ease;transition:all .1s ease;color:#fff;background-color:#b94d49;border-color:#b94d49}.code-output{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}.code-output input{-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;width:100%;padding:10px 20px;font-size:14px;font-family:monaco,courier;border:1px solid #b8b8b8;border-radius:4px}
