--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 
 $background: #181818;
 $copy: #E8E8E8;
